interactive with user and course

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 jwt.secret=6AFj8uY1d!s%3Bv#9Zp@l@7WhQ$Xs&98NsR*J0Lc
+
+
+logging.level.org.springframework.security=DEBUG
